tests/models/struct/named/vec/fail/default.rs
use dade::model;
#[model]
struct TestModel {
    #[field(default = 2)]
    value: Vec<()>,
}
fn main() {}
